TAG: gxdhtload-6-0-19-2
TAG: gxdhtload-6-0-19-1
DATE: 04/25/2022
STAFF: sc
CHANGES: wts2-823 'exclude HT experiments without samples from the classifier'

TAG: gxdhtload-6-0-18-9
DATE: 03/16/2022
STAFF: sc
CHANGES: wts2-815 duplicate pubmed id properties
  being created for AE experiments

TAG: gxdhtload-6-0-18-8
DATE: 03/15/2022
STAFF: sc
CHANGES: Changed eval state key in geo_htload.py - Connie had deleted it
   then had to recreate it. Bad Connie :-)

TAG: gxdhtload-6-0-18-7
DATE: 02/16/2022
STAFF: sc
CHANGES: wts2-795 GEO gxdhtmpload failure

TAG: gxdhtload-6-0-18-6
DATE: 02/16/2022
STAFF: sc
CHANGES: wts2-795 GEO gxdhtmpload failure

TAG: gxdhtload-6-0-18-5
DATE: 01/20/2022
STAFF: sc
CHANGES: YAKS build - add more error checking for sample downloads
    and writing them to new curation log'

TAG: gxdhtload-6-0-18-4
DATE: 01/10/2022
STAFF: sc
CHANGES: YAKS merge to trunk
bin/processPredicted.sh - updated call to c predict.py

TAG: gxdhtload-6-0-18-3
TAG: gxdhtload-6-0-18-2
TAG: gxdhtload-6-0-18-1
DATE: 01/10/2022
STAFF: sc
CHANGES: YAKS merge to trunk    
retire AE, add GEO, add HT classifir to GEO

TAG: gxdhtload-6-0-16-1
DATE: 08/21/2020
STAFF: sc
CHANGES: TR13204/I20 project/python 3.7 upgrade

TAG: gxdhtload-6-0-14-5
TAG: gxdhtload-6-0-14-4
DATE: 12/16/2019
STAFF: sc
CHANGES: TR13212 - fix for null provider contact in json

TAG: gxdhtload-6-0-14-3
TAG: gxdhtload-6-0-14-2
DATE: 05/13/2019
STAFF: sc
CHANGES: TR13116
1)removed debug print statements

TAG: gxdhtload-6-0-14-1
DATE: 05/08/2019
STAFF: lec
CHANGES: T13116
1) check for duplicate pubmedids before adding to properties

TAG: gxdhtload-6-0-12-1
DATE: 05/07/2018
STAFF: lec
CHANGES: TR12866/BIB_DataSet_Assoc removed
per connie, turn off flagExperiments.sh until futher notice
some changes were made to flagExperiments.py and pushed to Git,
but no testing was done.

TAG: gxdhtload-6-0-11-2
DATE: 03/28/2018
STAFF: sc
CHANGES:
1) clarify verbiage in QC report

TAG: gxdhtload-6-0-11-1
DATE: 03/01/2018
STAFF: sc